Bug 408606 - Font preview empty (white rectangle instead of preview)
Summary: Font preview empty (white rectangle instead of preview)
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_fonts (other bugs)
Version First Reported In: 5.19.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-12 11:03 UTC by Yaroslav Sidlovsky
Modified: 2021-01-17 14:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
kcm_fonts screenshot #1 (39.18 KB, image/png)
2019-06-12 11:03 UTC, Yaroslav Sidlovsky
Details
kcm_fonts screenshot #2 (39.36 KB, image/png)
2019-06-12 11:04 UTC, Yaroslav Sidlovsky
Details
kcm_fonts screenshot #3 (65.15 KB, image/png)
2019-06-12 13:04 UTC, Yaroslav Sidlovsky
Details
Same bug on plasma-workspace-5.19.5-3.fc33 (NVidia prop. driver) (51.58 KB, image/png)
2020-11-10 09:18 UTC, Yaroslav Sidlovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yaroslav Sidlovsky 2019-06-12 11:03:56 UTC
Created attachment 120812 [details]
kcm_fonts screenshot #1

After update to plasma 5.16.0 I can't see font previews in kcm_fonts.
It works for me in version 5.15 though.

There is some messages when starting kcmshell5 from the console:
file:///usr/share/kpackage/kcms/kcm_fonts/contents/ui/main.qml:197:21: QML Image: Invalid image provider: image://preview/0_0.png
file:///usr/share/kpackage/kcms/kcm_fonts/contents/ui/main.qml:160:21: QML Image: Invalid image provider: image://preview/0_0.png
file:///usr/lib64/qt5/qml/QtQuick/Controls.2/org.kde.desktop/private/MobileTextActionsToolBar.qml:62: TypeError: Cannot read property 'selectedText' of null
file:///usr/lib64/qt5/qml/QtQuick/Controls.2/org.kde.desktop/private/MobileTextActionsToolBar.qml:70: TypeError: Cannot read property 'selectedText' of null
file:///usr/lib64/qt5/qml/QtQuick/Controls.2/org.kde.desktop/private/MobileTextActionsToolBar.qml:78: TypeError: Cannot read property 'canPaste' of null


See screenshots in the attachments.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 30 x86_64
KDE Plasma Version: 5.16.0
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.1
Comment 1 Yaroslav Sidlovsky 2019-06-12 11:04:21 UTC
Created attachment 120813 [details]
kcm_fonts screenshot #2
Comment 2 Yaroslav Sidlovsky 2019-06-12 13:03:22 UTC
Just found strange thing: if I run systemsettings under kwin_wayland - I can see font previews (somehow looking very bad, but it's better then nothing :)

See screenshot #3 in the attachments.
Comment 3 Yaroslav Sidlovsky 2019-06-12 13:04:36 UTC
Created attachment 120815 [details]
kcm_fonts screenshot #3
Comment 4 Nate Graham 2019-07-21 21:09:50 UTC
Fixed in 5.17!
Comment 5 Yaroslav Sidlovsky 2020-11-10 09:13:17 UTC
Bug still is there and can be reproduced on NVidia videocard with proprietary driver.
Comment 6 Yaroslav Sidlovsky 2020-11-10 09:18:54 UTC
Created attachment 133197 [details]
Same bug on plasma-workspace-5.19.5-3.fc33 (NVidia prop. driver)
Comment 7 Yaroslav Sidlovsky 2020-11-10 09:21:26 UTC
Bug was caused by wrong pixel format (expected: RGB32, 0xffRRGGBB), but first byte of pixel is not 0xFF - so white rectangle is displayed.
We need same fix as in spectacle code: https://lxr.kde.org/source/kde/kdegraphics/spectacle/src/Platforms/PlatformXcb.cpp#0311.
I'll do PR.
Comment 8 Bug Janitor Service 2020-11-10 09:30:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/440
Comment 9 Yaroslav Sidlovsky 2021-01-15 11:52:53 UTC
Bug is still there and MR is not reviewed.
Comment 10 Yaroslav Sidlovsky 2021-01-17 14:46:30 UTC
Git commit bc2276aaf9952a13843d3cd1fe19ab81c05064d9 by Yaroslav Sidlovsky.
Committed on 17/01/2021 at 10:14.
Pushed by ngraham into branch 'master'.

Fix pixel format RGB32 is some cases (NVidia proprietary driver)

M  +8    -0    kcms/kfontinst/lib/FcEngine.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/bc2276aaf9952a13843d3cd1fe19ab81c05064d9