Fix pixel format RGB32 is some cases (NVidia proprietary driver)

BUG: 408606